--- a/config.yaml
+++ b/config.yaml
@@ -17,7 +17,7 @@ branch: main
 link_to_source: false
 
 # Each page will have a footer as defined by the `footer` field that can contain markdown.
-footer: [Crystal Maven](https://github.com/szabgab/crystak.code-maven)
+footer: See [Crystal Maven](https://github.com/szabgab/crystak.code-maven)
 
 # Each site has a /tags page generated from the tags in the individual pages.
 # The following parameters set the `title` of the page and the content of the `description` meta-tag.
