--- a/books/crystal/book.toml
+++ b/books/crystal/book.toml
@@ -6,9 +6,9 @@ title = "Crystal Programming"
 
 # Add github icon to the menu
 [output.html]
-git-repository-url = "https://github.com/szabgab/slides"
+git-repository-url = "https://github.com/szabgab/crystal.code-maven.com"
 git-repository-icon = "fa-github"
-edit-url-template = "https://github.com/szabgab/slides/edit/main/crystal/{path}"
+edit-url-template = "https://github.com/szabgab/crystal.code-maven.com/edit/main/books/crystal/{path}"
 
 [output.markdown]
 
